--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
             $('#profile_menu').toggleClass('active');
         });
     </script>
-    <script src="./../assets/navbar/js/script.js"></script>
+    <script src="assets/navbar/js/script.js"></script>
 </body>
 
 </html>
